having issues with horizontal scroll functionality for skills page

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body,
 html,
 #root {
   width: 100%;
-  height: 100%;
+  min-height: 100%; /* Change height to min-height */
   margin: 0;
   padding: 0;
   overflow-y: auto;
